--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ features = ["stm32l0x1", "rt"]
 [dev-dependencies]
 cortex-m-rt = "0.6.7"
 cortex-m-semihosting = "0.3.2"
+panic-halt = "0.2.0"
 panic-semihosting = "0.5.1"
 cortex-m-rtfm = "0.4.0"
 
