--- a/openocd.cfg
+++ b/openocd.cfg
@@ -1,5 +1,8 @@
-source [find interface/cmsis-dap.cfg]
-source [find target/stm32l0x.cfg]
+source [find interface/stlink-v2.cfg]
+source [find target/stm32l0.cfg]
 
 init
+reset halt
+sleep 1000
+stm32lx mass_erase 0
 flash probe 0
