--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 language: rust
 rust:
   - stable
-  - nightly
 cache: cargo
 env:
-- MCU=stm32l0x1
+- FEAT=stm32l0x1,rt
 matrix:
-  allow_failures:
-    - rust: nightly
   fast_finish: true
 script:
   - rustup target add thumbv6m-none-eabi
-  - cargo build --release --examples --features=$MCU
+  - cargo build --release --examples --features $FEAT
   
