Updated cortex-m to 0.6.0 to fix multiple "CORE_PERIPHERALS" issue.
Updated cortex-m to 0.6.0 to fix multiple "CORE_PERIPHERALS" issue.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ rust:
   - stable
 cache: cargo
 env:
-- FEAT=stm32l0x1,rt
+- MCU=stm32l0x1
 matrix:
   fast_finish: true
 script:
   - rustup target add thumbv6m-none-eabi
-  - cargo build --release --examples --features $FEAT
+  - cargo build --release --examples --features $MCU
   
