--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
 language: rust
 rust:
   - stable
+  - nightly
 cache: cargo
 env:
 - MCU=stm32l0x1
 matrix:
+  allow_failures:
+    - rust: nightly
   fast_finish: true
 script:
   - rustup target add thumbv6m-none-eabi
   - cargo build --release --examples --features $MCU
-  
