--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ features = ["stm32l0x1", "rt"]
 
 [dependencies]
 embedded-hal = { version = "0.2.2", features = ["unproven"] }
-cortex-m = {version = ">=0.5.8,<0.7.0", features = ["const-fn"] }
+cortex-m = {version = "0.5.8", features = ["const-fn"] }
 cortex-m-rt = "0.6.8"
 cortex-m-semihosting = "0.3.2"
 cortex-m-rtfm = "0.4.3"
