--- a/openocd.cfg
+++ b/openocd.cfg
@@ -3,6 +3,6 @@ source [find target/stm32l0.cfg]
 
 init
 reset halt
-sleep 1000
-stm32lx mass_erase 0
-flash probe 0
+sleep 10
+flash info 0
+flash erase_address 0x08000000 0x4000
