--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ matrix:
   fast_finish: true
 script:
   - rustup target add thumbv6m-none-eabi
-  - cargo build --release --examples --features $MCU
+  - cargo build --release --examples --features rt,$MCU
