--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ matrix:
   fast_finish: true
 script:
   - rustup target add thumbv6m-none-eabi
-  - cargo build --release --examples --features rt,$MCU
+  - RUSTFLAGS="-D warnings" cargo build --release --examples --features rt,$MCU
