Add Cargo features for STM32L062, STM32L082
Those have the AES peripheral, which isn't available on other STM32L0x2
MCUs. I'm currently working on an AES API, so I'm going to need those
features.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ cache: cargo
 env:
 - MCU=stm32l0x1
 - MCU=stm32l0x2
+# STM32L062 is not being run, as it's currently identical to STM32L082
+- MCU=stm32l082
 matrix:
   allow_failures:
     - rust: nightly
