Add AES example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,10 @@ opt-level = "s"
 
 
 [[example]]
+name = "aes"
+required-features = ["stm32l082"]
+
+[[example]]
 name = "button_irq"
 required-features = ["rt"]
 
