check cargo fmt in CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ matrix:
   allow_failures:
     - rust: nightly
   fast_finish: true
-script:
+before_script:
+  - rustup component add rustfmt
   - rustup target add thumbv6m-none-eabi
+script:
+  - cargo fmt -- --check
   - RUSTFLAGS="-D warnings" cargo build --release --examples --features rt,$MCU
