--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,6 +100,10 @@ name = "button_irq_rtfm"
 required-features = ["rt"]
 
 [[example]]
+name = "serial_dma"
+required-features = ["stm32l0x2"]
+
+[[example]]
 name = "timer"
 required-features = ["rt"]
 
