aes: Add support for CBC mode

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,6 +84,10 @@ opt-level = "s"
 
 
 [[example]]
+name = "aes_cbc"
+required-features = ["stm32l082"]
+
+[[example]]
 name = "aes_ctr"
 required-features = ["stm32l082"]
 
