--- a/.cargo/config
+++ b/.cargo/config
@@ -8,6 +8,7 @@
 # runner = "arm-none-eabi-gdb -q -x openocd.gdb"
 # runner = "gdb-multiarch -q -x openocd.gdb"
 # runner = "gdb -q -x openocd.gdb"
+runner = "./flash.sh"
 
 rustflags = [
   # LLD (shipped with the Rust toolchain) is used as the default linker
