--- a/Cargo.toml
+++ b/Cargo.toml
@@ -116,6 +116,10 @@ name = "serial_dma"
 required-features = ["stm32l0x2"]
 
 [[example]]
+name = "serial_dma_async"
+required-features = ["stm32l0x2"]
+
+[[example]]
 name = "timer"
 required-features = ["rt"]
 
