--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ cortex-m-rtfm = "0.4.3"
 [features]
 # Miscellaneaous features
 rt = ["stm32l0/rt"]
+disable-linker-script = []
 # MCUs
 stm32l0x1 = ["stm32l0/stm32l0x1"]
 stm32l0x2 = ["stm32l0/stm32l0x2"]
