--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ version = "0.4.0"
 features = ["stm32l0x1", "rt"]
 
 [dependencies]
+stm32l0 = "0.9.0"
 as-slice = "0.1.0"
 embedded-hal = { version = "0.2.3", features = ["unproven"] }
 cortex-m = {version = "0.6.1", features = ["const-fn"] }
@@ -35,9 +36,6 @@ cortex-m-semihosting = "0.3.2"
 void = { version = "1.0.2", default-features = false }
 cast = { version = "0.2.2", default-features = false }
 nb = "0.1.2"
-
-[dependencies.stm32l0]
-version = "0.8.0"
 
 [dev-dependencies]
 aligned = "0.3.1"
