--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ cortex-m-semihosting = "0.3.2"
 void = { version = "1.0.2", default-features = false }
 cast = { version = "0.2.2", default-features = false }
 nb = "0.1.2"
+stm32-usbd = { version = "0.5.0", features = ["ram_access_2x16"], optional = true }
 
 [dependencies.stm32l0]
 version = "0.8.0"
