--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ repository = "https://github.com/stm32-rs/stm32l0xx-hal"
 version = "0.4.0"
 
 [package.metadata.docs.rs]
-features = ["stm32l0x1", "rt"]
+features = ["stm32l0x2", "rt", "stm32-usbd"]
 
 [dependencies]
 as-slice = "0.1.0"
