Add ADC continuous conversion example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -263,6 +263,10 @@ opt-level = "s"
 
 
 [[example]]
+name = "adc_cont"
+required-features = ["stm32l0x2"]
+
+[[example]]
 name = "aes_ecb"
 required-features = ["stm32l082"]
 
