Restrict `adc_multi` example to STM32L0x2
It doesn't compile on the other targets.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -267,6 +267,10 @@ name = "adc_cont"
 required-features = ["stm32l0x2"]
 
 [[example]]
+name = "adc_multi"
+required-features = ["stm32l0x2"]
+
+[[example]]
 name = "adc_trig"
 required-features = ["stm32l0x2"]
 
