--- a/.travis.yml
+++ b/.travis.yml
@@ -47,5 +47,7 @@ matrix:
     # - env: MCU=stm32l082 PACKAGE=wlcsp49
 before_script:
   - rustup target add thumbv6m-none-eabi
+  - rustup component add rustfmt
 script:
   - RUSTFLAGS="-D warnings" cargo build --release --examples --features="rt $MCU $IO $PACKAGE $FEATURES"
+  - cargo fmt --all -- --check
