LinkedTimer: Implement initial version
A `LinkedTimer` is initialized with two hardware timers (either
TIM2/TIM3 or TIM21/TIM22). The two timers are configured in master/slave
mode so that an overflow of the master timer triggers an update on the
slave timer. This way, two 16 bit timers can be combined to a single 32
bit timer.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -347,6 +347,10 @@ name = "timer_interrupt_rtic"
 required-features = ["rt"]
 
 [[example]]
+name = "linked_timer_rtic"
+required-features = ["rt", "stm32l0x1", "io-STM32L071"]
+
+[[example]]
 name = "adc_pwm"
 required-features = ["stm32l0x1"]
 
