remove depreciated features from #cfg guards
The 'stm32l052', 'stm32l072', and 'stm32l082' features are marked
depreciated and not intended to be used by consumers but they are
frequently used to enable specific features within the API.

This commit aliases the features to family/category pairs and
changes the #cfg guards to match

This WILL create issues when a specific package does not provide
all the pins, as the old features are really a family/category/package
triplet

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,9 +60,9 @@ stm32l0x2 = ["stm32l0/stm32l0x2"]
 stm32l0x3 = ["stm32l0/stm32l0x3"]
 
 # Legacy features (don't use those anymore)
-stm32l052 = ["stm32l0x2"]
-stm32l072 = ["stm32l0x2"]
-stm32l082 = ["stm32l0x2"]
+stm32l052 = ["stm32l0x2", "io-STM32L051"]
+stm32l072 = ["stm32l0x2", "io-STM32L071"]
+stm32l082 = ["stm32l0x2", "io-STM32L071"]
 
 # Features based on the GPIO peripheral version.
 # This determines the pin function mapping of the MCU.
@@ -98,12 +98,15 @@ wlcsp49 = []
 #
 # Note: These are just aliases for the proper io-* feature and physical
 # package. Do *not* use these features in any `cfg` attributes in the HAL!
-mcu-STM32L010C6Tx = ["io-STM32L031", "lqfp48"]
+# STM32L0x0 value line
 mcu-STM32L010F4Px = ["io-STM32L021", "tssop20"]
 mcu-STM32L010K4Tx = ["io-STM32L021", "lqfp32"]
+mcu-STM32L010C6Tx = ["io-STM32L031", "lqfp48"]
 mcu-STM32L010K8Tx = ["io-STM32L051", "lqfp32"]
 mcu-STM32L010R8Tx = ["io-STM32L051", "lqfp64"]
 mcu-STM32L010RBTx = ["io-STM32L071", "lqfp64"]
+
+# STM32L0x1 Access line
 mcu-STM32L011D3Px = ["io-STM32L021", "stm32l0x1", "tssop14"]
 mcu-STM32L011D4Px = ["io-STM32L021", "stm32l0x1", "tssop14"]
 mcu-STM32L011E3Yx = ["io-STM32L021", "stm32l0x1", "wlcsp25"]
@@ -158,29 +161,6 @@ mcu-STM32L051R8Hx = ["io-STM32L051", "stm32l0x1", "tfbga64"]
 mcu-STM32L051R8Tx = ["io-STM32L051", "stm32l0x1", "lqfp64"]
 mcu-STM32L051T6Yx = ["io-STM32L051", "stm32l0x1", "wlcsp36"]
 mcu-STM32L051T8Yx = ["io-STM32L051", "stm32l0x1", "wlcsp36"]
-mcu-STM32L052C6Tx = ["io-STM32L051", "stm32l0x2", "lqfp48"]
-mcu-STM32L052C8Tx = ["io-STM32L051", "stm32l0x2", "lqfp48"]
-mcu-STM32L052K6Tx = ["io-STM32L051", "stm32l0x2", "lqfp32"]
-mcu-STM32L052K6Ux = ["io-STM32L051", "stm32l0x2", "ufqfpn32"]
-mcu-STM32L052K8Tx = ["io-STM32L051", "stm32l0x2", "lqfp32"]
-mcu-STM32L052K8Ux = ["io-STM32L051", "stm32l0x2", "ufqfpn32"]
-mcu-STM32L052R6Hx = ["io-STM32L051", "stm32l0x2", "tfbga64"]
-mcu-STM32L052R6Tx = ["io-STM32L051", "stm32l0x2", "lqfp64"]
-mcu-STM32L052R8Hx = ["io-STM32L051", "stm32l0x2", "tfbga64"]
-mcu-STM32L052R8Tx = ["io-STM32L051", "stm32l0x2", "lqfp64"]
-mcu-STM32L052T6Yx = ["io-STM32L051", "stm32l0x2", "wlcsp36"]
-mcu-STM32L052T8Fx = ["io-STM32L051", "stm32l0x2", "wlcsp36"]
-mcu-STM32L052T8Yx = ["io-STM32L051", "stm32l0x2", "wlcsp36"]
-mcu-STM32L053C6Tx = ["io-STM32L051", "stm32l0x3", "lqfp48"]
-mcu-STM32L053C8Tx = ["io-STM32L051", "stm32l0x3", "lqfp48"]
-mcu-STM32L053R6Hx = ["io-STM32L051", "stm32l0x3", "tfbga64"]
-mcu-STM32L053R6Tx = ["io-STM32L051", "stm32l0x3", "lqfp64"]
-mcu-STM32L053R8Hx = ["io-STM32L051", "stm32l0x3", "tfbga64"]
-mcu-STM32L053R8Tx = ["io-STM32L051", "stm32l0x3", "lqfp64"]
-mcu-STM32L062K8Tx = ["io-STM32L051", "stm32l0x2", "lqfp32"]
-mcu-STM32L062K8Ux = ["io-STM32L051", "stm32l0x2", "ufqfpn32"]
-mcu-STM32L063C8Tx = ["io-STM32L051", "stm32l0x3", "lqfp48"]
-mcu-STM32L063R8Tx = ["io-STM32L051", "stm32l0x3", "lqfp64"]
 mcu-STM32L071C8Tx = ["io-STM32L071", "stm32l0x1", "lqfp48"]
 mcu-STM32L071CBTx = ["io-STM32L071", "stm32l0x1", "lqfp48"]
 mcu-STM32L071CBYx = ["io-STM32L071", "stm32l0x1", "wlcsp49"]
@@ -201,6 +181,27 @@ mcu-STM32L071VBIx = ["io-STM32L071", "stm32l0x1", "ufbga100"]
 mcu-STM32L071VBTx = ["io-STM32L071", "stm32l0x1", "lqfp100"]
 mcu-STM32L071VZIx = ["io-STM32L071", "stm32l0x1", "ufbga100"]
 mcu-STM32L071VZTx = ["io-STM32L071", "stm32l0x1", "lqfp100"]
+mcu-STM32L081CBTx = ["io-STM32L071", "stm32l0x1", "lqfp48"]
+mcu-STM32L081CZTx = ["io-STM32L071", "stm32l0x1", "lqfp48"]
+mcu-STM32L081KZTx = ["io-STM32L071", "stm32l0x1", "lqfp32"]
+mcu-STM32L081KZUx = ["io-STM32L071", "stm32l0x1", "ufqfpn32"]
+
+# STM32L0x2 Line (USB)
+mcu-STM32L052C6Tx = ["io-STM32L051", "stm32l0x2", "lqfp48"]
+mcu-STM32L052C8Tx = ["io-STM32L051", "stm32l0x2", "lqfp48"]
+mcu-STM32L052K6Tx = ["io-STM32L051", "stm32l0x2", "lqfp32"]
+mcu-STM32L052K6Ux = ["io-STM32L051", "stm32l0x2", "ufqfpn32"]
+mcu-STM32L052K8Tx = ["io-STM32L051", "stm32l0x2", "lqfp32"]
+mcu-STM32L052K8Ux = ["io-STM32L051", "stm32l0x2", "ufqfpn32"]
+mcu-STM32L052R6Hx = ["io-STM32L051", "stm32l0x2", "tfbga64"]
+mcu-STM32L052R6Tx = ["io-STM32L051", "stm32l0x2", "lqfp64"]
+mcu-STM32L052R8Hx = ["io-STM32L051", "stm32l0x2", "tfbga64"]
+mcu-STM32L052R8Tx = ["io-STM32L051", "stm32l0x2", "lqfp64"]
+mcu-STM32L052T6Yx = ["io-STM32L051", "stm32l0x2", "wlcsp36"]
+mcu-STM32L052T8Fx = ["io-STM32L051", "stm32l0x2", "wlcsp36"]
+mcu-STM32L052T8Yx = ["io-STM32L051", "stm32l0x2", "wlcsp36"]
+mcu-STM32L062K8Tx = ["io-STM32L051", "stm32l0x2", "lqfp32"]
+mcu-STM32L062K8Ux = ["io-STM32L051", "stm32l0x2", "ufqfpn32"]
 mcu-STM32L072CBTx = ["io-STM32L071", "stm32l0x2", "lqfp48"]
 mcu-STM32L072CBYx = ["io-STM32L071", "stm32l0x2", "wlcsp49"]
 mcu-STM32L072CZEx = ["io-STM32L071", "stm32l0x2", "ewlcsp49"]
@@ -222,6 +223,21 @@ mcu-STM32L072VBIx = ["io-STM32L071", "stm32l0x2", "ufbga100"]
 mcu-STM32L072VBTx = ["io-STM32L071", "stm32l0x2", "lqfp100"]
 mcu-STM32L072VZIx = ["io-STM32L071", "stm32l0x2", "ufbga100"]
 mcu-STM32L072VZTx = ["io-STM32L071", "stm32l0x2", "lqfp100"]
+mcu-STM32L082CZYx = ["io-STM32L071", "stm32l0x2", "wlcsp49"]
+mcu-STM32L082KBTx = ["io-STM32L071", "stm32l0x2", "lqfp32"]
+mcu-STM32L082KBUx = ["io-STM32L071", "stm32l0x2", "ufqfpn32"]
+mcu-STM32L082KZTx = ["io-STM32L071", "stm32l0x2", "lqfp32"]
+mcu-STM32L082KZUx = ["io-STM32L071", "stm32l0x2", "ufqfpn32"]
+
+# STM32L0x3 (USB + LCD)
+mcu-STM32L053C6Tx = ["io-STM32L051", "stm32l0x3", "lqfp48"]
+mcu-STM32L053C8Tx = ["io-STM32L051", "stm32l0x3", "lqfp48"]
+mcu-STM32L053R6Hx = ["io-STM32L051", "stm32l0x3", "tfbga64"]
+mcu-STM32L053R6Tx = ["io-STM32L051", "stm32l0x3", "lqfp64"]
+mcu-STM32L053R8Hx = ["io-STM32L051", "stm32l0x3", "tfbga64"]
+mcu-STM32L053R8Tx = ["io-STM32L051", "stm32l0x3", "lqfp64"]
+mcu-STM32L063C8Tx = ["io-STM32L051", "stm32l0x3", "lqfp48"]
+mcu-STM32L063R8Tx = ["io-STM32L051", "stm32l0x3", "lqfp64"]
 mcu-STM32L073CBTx = ["io-STM32L071", "stm32l0x3", "lqfp48"]
 mcu-STM32L073CZTx = ["io-STM32L071", "stm32l0x3", "lqfp48"]
 mcu-STM32L073RBHx = ["io-STM32L071", "stm32l0x3", "tfbga64"]
@@ -235,15 +251,6 @@ mcu-STM32L073VBIx = ["io-STM32L071", "stm32l0x3", "ufbga100"]
 mcu-STM32L073VBTx = ["io-STM32L071", "stm32l0x3", "lqfp100"]
 mcu-STM32L073VZIx = ["io-STM32L071", "stm32l0x3", "ufbga100"]
 mcu-STM32L073VZTx = ["io-STM32L071", "stm32l0x3", "lqfp100"]
-mcu-STM32L081CBTx = ["io-STM32L071", "stm32l0x1", "lqfp48"]
-mcu-STM32L081CZTx = ["io-STM32L071", "stm32l0x1", "lqfp48"]
-mcu-STM32L081KZTx = ["io-STM32L071", "stm32l0x1", "lqfp32"]
-mcu-STM32L081KZUx = ["io-STM32L071", "stm32l0x1", "ufqfpn32"]
-mcu-STM32L082CZYx = ["io-STM32L071", "stm32l0x2", "wlcsp49"]
-mcu-STM32L082KBTx = ["io-STM32L071", "stm32l0x2", "lqfp32"]
-mcu-STM32L082KBUx = ["io-STM32L071", "stm32l0x2", "ufqfpn32"]
-mcu-STM32L082KZTx = ["io-STM32L071", "stm32l0x2", "lqfp32"]
-mcu-STM32L082KZUx = ["io-STM32L071", "stm32l0x2", "ufqfpn32"]
 mcu-STM32L083CBTx = ["io-STM32L071", "stm32l0x3", "lqfp48"]
 mcu-STM32L083CZTx = ["io-STM32L071", "stm32l0x3", "lqfp48"]
 mcu-STM32L083RBHx = ["io-STM32L071", "stm32l0x3", "tfbga64"]
