--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ cortex-m-semihosting = "0.3.2"
 void = { version = "1.0.2", default-features = false }
 cast = { version = "0.2.2", default-features = false }
 nb = "1.0.0"
-stm32-usbd = { version = "0.5.0", features = ["ram_access_2x16"], optional = true }
+stm32-usbd = { version = "0.6.0", optional = true }
 
 [dev-dependencies]
 aligned = "0.3.1"
