--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,17 +27,31 @@ version = "0.7.0"
 features = ["stm32l0x2", "rt", "stm32-usbd", "eeprom-2048"]
 targets = ["thumbv6m-none-eabi"]
 
+
 [dependencies]
 stm32l0 = "0.13.0"
 as-slice = "0.2.1"
-embedded-hal = { version = "0.2.3", features = ["unproven"] }
 cortex-m =  "0.7.0"
 cortex-m-rt = "0.6.8"
 cortex-m-semihosting = "0.3.2"
-void = { version = "1.0.2", default-features = false }
-cast = { version = "0.2.2", default-features = false }
 nb = "1.0.0"
-stm32-usbd = { version = "0.6.0", optional = true }
+
+[dependencies.cast]
+version = "0.2.2"
+default-features = false
+
+[dependencies.embedded-hal]
+version = "0.2.3"
+features = ["unproven"]
+
+[dependencies.stm32-usbd]
+version = "0.6.0"
+optional = true
+
+[dependencies.void]
+version = "1.0.2"
+default-features = false
+
 
 [dev-dependencies]
 aligned = "0.3.1"
