--- a/Cargo.toml
+++ b/Cargo.toml
@@ -134,6 +134,7 @@ mcu-STM32L021G4Ux = ["stm32l0x1", "ufqfpn28", "io-STM32L021", "eeprom-512"]
 mcu-STM32L021K4Tx = ["stm32l0x1", "lqfp32", "io-STM32L021", "eeprom-512"]
 mcu-STM32L021K4Ux = ["stm32l0x1", "ufqfpn32", "io-STM32L021", "eeprom-512"]
 mcu-STM32L031C4Tx = ["stm32l0x1", "lqfp48", "io-STM32L031", "eeprom-1024"]
+mcu-STM32L031C4Ux = ["stm32l0x1", "ufqfpn48", "io-STM32L031", "eeprom-1024"]
 mcu-STM32L031C6Tx = ["stm32l0x1", "lqfp48", "io-STM32L031", "eeprom-1024"]
 mcu-STM32L031C6Ux = ["stm32l0x1", "ufqfpn48", "io-STM32L031", "eeprom-1024"]
 mcu-STM32L031E4Yx = ["stm32l0x1", "wlcsp25", "io-STM32L031", "eeprom-1024"]
@@ -149,6 +150,7 @@ mcu-STM32L031K6Tx = ["stm32l0x1", "lqfp32", "io-STM32L031", "eeprom-1024"]
 mcu-STM32L031K6Ux = ["stm32l0x1", "ufqfpn32", "io-STM32L031", "eeprom-1024"]
 mcu-STM32L041C4Tx = ["stm32l0x1", "lqfp48", "io-STM32L031", "eeprom-1024"]
 mcu-STM32L041C6Tx = ["stm32l0x1", "lqfp48", "io-STM32L031", "eeprom-1024"]
+mcu-STM32L041C6Ux = ["stm32l0x1", "ufqfpn48", "io-STM32L031", "eeprom-1024"]
 mcu-STM32L041E6Yx = ["stm32l0x1", "wlcsp25", "io-STM32L031", "eeprom-1024"]
 mcu-STM32L041F6Px = ["stm32l0x1", "tssop20", "io-STM32L031", "eeprom-1024"]
 mcu-STM32L041G6Ux = ["stm32l0x1", "ufqfpn28", "io-STM32L031", "eeprom-1024"]
@@ -156,7 +158,9 @@ mcu-STM32L041G6UxS = ["stm32l0x1", "ufqfpn28", "io-STM32L031", "eeprom-1024"]
 mcu-STM32L041K6Tx = ["stm32l0x1", "lqfp32", "io-STM32L031", "eeprom-1024"]
 mcu-STM32L041K6Ux = ["stm32l0x1", "ufqfpn32", "io-STM32L031", "eeprom-1024"]
 mcu-STM32L051C6Tx = ["stm32l0x1", "lqfp48", "io-STM32L051", "eeprom-2048"]
+mcu-STM32L051C6Ux = ["stm32l0x1", "ufqfpn48", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L051C8Tx = ["stm32l0x1", "lqfp48", "io-STM32L051", "eeprom-2048"]
+mcu-STM32L051C8Ux = ["stm32l0x1", "ufqfpn48", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L051K6Tx = ["stm32l0x1", "lqfp32", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L051K6Ux = ["stm32l0x1", "ufqfpn32", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L051K8Tx = ["stm32l0x1", "lqfp32", "io-STM32L051", "eeprom-2048"]
@@ -168,7 +172,9 @@ mcu-STM32L051R8Tx = ["stm32l0x1", "lqfp64", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L051T6Yx = ["stm32l0x1", "wlcsp36", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L051T8Yx = ["stm32l0x1", "wlcsp36", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L052C6Tx = ["stm32l0x2", "lqfp48", "io-STM32L051", "eeprom-2048"]
+mcu-STM32L052C6Ux = ["stm32l0x2", "ufqfpn48", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L052C8Tx = ["stm32l0x2", "lqfp48", "io-STM32L051", "eeprom-2048"]
+mcu-STM32L052C8Ux = ["stm32l0x2", "ufqfpn48", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L052K6Tx = ["stm32l0x2", "lqfp32", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L052K6Ux = ["stm32l0x2", "ufqfpn32", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L052K8Tx = ["stm32l0x2", "lqfp32", "io-STM32L051", "eeprom-2048"]
@@ -181,19 +187,26 @@ mcu-STM32L052T6Yx = ["stm32l0x2", "wlcsp36", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L052T8Fx = ["stm32l0x2", "wlcsp36", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L052T8Yx = ["stm32l0x2", "wlcsp36", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L053C6Tx = ["stm32l0x3", "lqfp48", "io-STM32L051", "eeprom-2048"]
+mcu-STM32L053C6Ux = ["stm32l0x3", "ufqfpn48", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L053C8Tx = ["stm32l0x3", "lqfp48", "io-STM32L051", "eeprom-2048"]
+mcu-STM32L053C8Ux = ["stm32l0x3", "ufqfpn48", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L053R6Hx = ["stm32l0x3", "tfbga64", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L053R6Tx = ["stm32l0x3", "lqfp64", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L053R8Hx = ["stm32l0x3", "tfbga64", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L053R8Tx = ["stm32l0x3", "lqfp64", "io-STM32L051", "eeprom-2048"]
+mcu-STM32L062C8Ux = ["stm32l0x2", "ufqfpn48", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L062K8Tx = ["stm32l0x2", "lqfp32", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L062K8Ux = ["stm32l0x2", "ufqfpn32", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L063C8Tx = ["stm32l0x3", "lqfp48", "io-STM32L051", "eeprom-2048"]
+mcu-STM32L063C8Ux = ["stm32l0x3", "ufqfpn48", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L063R8Tx = ["stm32l0x3", "lqfp64", "io-STM32L051", "eeprom-2048"]
 mcu-STM32L071C8Tx = ["stm32l0x1", "lqfp48", "io-STM32L071", "eeprom-3072"]
+mcu-STM32L071C8Ux = ["stm32l0x1", "ufqfpn48", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L071CBTx = ["stm32l0x1", "lqfp48", "io-STM32L071", "eeprom-6144"]
+mcu-STM32L071CBUx = ["stm32l0x1", "ufqfpn48", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L071CBYx = ["stm32l0x1", "wlcsp49", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L071CZTx = ["stm32l0x1", "lqfp48", "io-STM32L071", "eeprom-6144"]
+mcu-STM32L071CZUx = ["stm32l0x1", "ufqfpn48", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L071CZYx = ["stm32l0x1", "wlcsp49", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L071K8Ux = ["stm32l0x1", "ufqfpn32", "io-STM32L071", "eeprom-3072"]
 mcu-STM32L071KBTx = ["stm32l0x1", "lqfp32", "io-STM32L071", "eeprom-6144"]
@@ -211,9 +224,11 @@ mcu-STM32L071VBTx = ["stm32l0x1", "lqfp100", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L071VZIx = ["stm32l0x1", "ufbga100", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L071VZTx = ["stm32l0x1", "lqfp100", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L072CBTx = ["stm32l0x2", "lqfp48", "io-STM32L071", "eeprom-6144"]
+mcu-STM32L072CBUx = ["stm32l0x2", "ufqfpn48", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L072CBYx = ["stm32l0x2", "wlcsp49", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L072CZEx = ["stm32l0x2", "ewlcsp49", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L072CZTx = ["stm32l0x2", "lqfp48", "io-STM32L071", "eeprom-6144"]
+mcu-STM32L072CZUx = ["stm32l0x2", "ufqfpn48", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L072CZYx = ["stm32l0x2", "wlcsp49", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L072KBTx = ["stm32l0x2", "lqfp32", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L072KBUx = ["stm32l0x2", "ufqfpn32", "io-STM32L071", "eeprom-6144"]
@@ -232,7 +247,10 @@ mcu-STM32L072VBTx = ["stm32l0x2", "lqfp100", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L072VZIx = ["stm32l0x2", "ufbga100", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L072VZTx = ["stm32l0x2", "lqfp100", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L073CBTx = ["stm32l0x3", "lqfp48", "io-STM32L071", "eeprom-6144"]
+mcu-STM32L073CBUx = ["stm32l0x3", "ufqfpn48", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L073CZTx = ["stm32l0x3", "lqfp48", "io-STM32L071", "eeprom-6144"]
+mcu-STM32L073CZUx = ["stm32l0x3", "ufqfpn48", "io-STM32L071", "eeprom-6144"]
+mcu-STM32L073CZYx = ["stm32l0x3", "wlcsp49", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L073RBHx = ["stm32l0x3", "tfbga64", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L073RBTx = ["stm32l0x3", "lqfp64", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L073RZHx = ["stm32l0x3", "tfbga64", "io-STM32L071", "eeprom-6144"]
@@ -246,8 +264,10 @@ mcu-STM32L073VZIx = ["stm32l0x3", "ufbga100", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L073VZTx = ["stm32l0x3", "lqfp100", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L081CBTx = ["stm32l0x1", "lqfp48", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L081CZTx = ["stm32l0x1", "lqfp48", "io-STM32L071", "eeprom-6144"]
+mcu-STM32L081CZUx = ["stm32l0x1", "ufqfpn48", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L081KZTx = ["stm32l0x1", "lqfp32", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L081KZUx = ["stm32l0x1", "ufqfpn32", "io-STM32L071", "eeprom-6144"]
+mcu-STM32L082CZUx = ["stm32l0x2", "ufqfpn48", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L082CZYx = ["stm32l0x2", "wlcsp49", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L082KBTx = ["stm32l0x2", "lqfp32", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L082KBUx = ["stm32l0x2", "ufqfpn32", "io-STM32L071", "eeprom-6144"]
@@ -255,6 +275,7 @@ mcu-STM32L082KZTx = ["stm32l0x2", "lqfp32", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L082KZUx = ["stm32l0x2", "ufqfpn32", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L083CBTx = ["stm32l0x3", "lqfp48", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L083CZTx = ["stm32l0x3", "lqfp48", "io-STM32L071", "eeprom-6144"]
+mcu-STM32L083CZUx = ["stm32l0x3", "ufqfpn48", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L083RBHx = ["stm32l0x3", "tfbga64", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L083RBTx = ["stm32l0x3", "lqfp64", "io-STM32L071", "eeprom-6144"]
 mcu-STM32L083RZHx = ["stm32l0x3", "tfbga64", "io-STM32L071", "eeprom-6144"]
