--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ cortex-m =  "0.7.0"
 cortex-m-rt = "0.6.8"
 cortex-m-semihosting = "0.3.2"
 nb = "1.0.0"
+embedded-time = "0.12.0"
 
 [dependencies.cast]
 version = "0.2.2"
