RTC API revamp based on the rtcc crate
The `rtc::RTC` struct has been renamed to `rtc::Rtc` and includes a big
refactoring and a few API changes. It now implements the traits from the
[rtcc crate](https://docs.rs/rtcc/) and uses date/time types from
Chrono.

Because additional dependencies were added, the `rtc` module is now
behind an optional `rtc` feature (enabled by default).

The changes also include a fix for RTC year handling. Previously, the
implementation incorrectly assumed that the BCD year 00 corresponds to
1970, but this results in a wrong leap year calculation. The correct
time base is the year 2000.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ repository = "https://github.com/stm32-rs/stm32l0xx-hal"
 version = "0.7.0"
 
 [package.metadata.docs.rs]
-features = ["stm32l0x2", "rt", "stm32-usbd", "eeprom-2048"]
+features = ["stm32l0x2", "rt", "stm32-usbd", "eeprom-2048", "rtc"]
 targets = ["thumbv6m-none-eabi"]
 
 
@@ -36,6 +36,7 @@ cortex-m-rt = "0.6.8"
 cortex-m-semihosting = "0.3.2"
 nb = "1.0.0"
 embedded-time = "0.12.0"
+rtcc = { version = "0.2", optional = true }
 
 [dependencies.cast]
 version = "0.2.2"
@@ -64,6 +65,12 @@ usb-device = "0.2.3"
 usbd-serial = "0.1.0"
 
 [features]
+# Default features
+default = ["rtc"]
+
+# Support for RTC, pulls in rtcc and chrono dependencies
+rtc = ["rtcc"]
+
 # Miscellaneaous features
 rt = ["stm32l0/rt"]
 disable-linker-script = []
