--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ authors = [
     "Arko <arko2600@gmail.com>",
     "Hanno Braun <hanno@braun-odw.eu>",
     "Danilo Bargen <mail@dbrgn.ch>",
+    "James Waples <james@wapl.es>",
 ]
 categories = ["embedded", "hardware-support", "no-std"]
 description = "Peripheral access API for STM32L0 series microcontrollers"
@@ -14,7 +15,7 @@ license = "0BSD"
 name = "stm32l0xx-hal"
 readme = "README.md"
 repository = "https://github.com/stm32-rs/stm32l0xx-hal"
-version = "0.9.0"
+version = "0.10.0"
 
 [package.metadata.docs.rs]
 features = ["mcu-STM32L071KBTx", "rt", "stm32-usbd", "rtc"]
