--- a/Cargo.toml
+++ b/Cargo.toml
@@ -392,6 +392,10 @@ name = "serial_lse"
 required-features = ["stm32l0x2", "io-STM32L071"]
 
 [[example]]
+name = "spi2"
+required-features = ["stm32l0x1", "io-STM32L051"]
+
+[[example]]
 name = "timer"
 required-features = ["rt"]
 
